feat: search engine code
