# cmd/server/router.go
@@ -10,9 +10,10 @@ import (
 )
 
 // setupRouter sets up the routes for the application.
-func setupRouter(handler *handlers.Handler) *gin.Engine {
-	router := gin.Default()
-
+func setupRouter() *gin.Engine {
+	router := gin.New()
+	router.Use(gin.Recovery())
+	router.Use(jsonLoggerMiddleware()) // logging
 	// CORS middleware 다 허용
 	router.Use(cors.New(cors.Config{
 		AllowOrigins:     []string{"*"},
@@ -22,33 +23,20 @@ func setupRouter(handler *handlers.Handler) *gin.Engine {
 		AllowCredentials: true,
 	}))
 
-	docs.SwaggerInfo.Title = "Wish API"
-	docs.SwaggerInfo.Description = "This is a sample server for a Wish API."
+	docs.SwaggerInfo.Title = "Techeerzip Search API"
+	docs.SwaggerInfo.Description = "Search Engine API"
 	docs.SwaggerInfo.Version = "1.0"
 	docs.SwaggerInfo.BasePath = "/api/v1"
 
-	// apiGroup := router.Group("/api/v1")
-	// {
-	// Post routes
-	// postGroup := apiGroup.Group("/wishes")
-	// {
-	// 	postGroup.GET("/:id", handler.WishHandler.GetWish)
-	// 	postGroup.GET("/pending", handler.WishHandler.GetPendingWishes)
-	// 	postGroup.GET("/approved", handler.WishHandler.GetApprovedWishes)
-	// 	postGroup.GET("/rejected", handler.WishHandler.GetRejectedWishes)
-	// 	postGroup.PATCH("/:id", handler.WishHandler.UpdateWish)
-	// 	postGroup.DELETE("/:id", handler.WishHandler.DeleteWish)
-	// 	postGroup.POST("/", handler.WishHandler.CreateWish)
-	// }
+	apiGroup := router.Group("/api/v1")
+	{
+		// search routes
+		searchGroup := apiGroup.Group("/search")
+		{
+			searchGroup.GET("/combined", handlers.SearchHandler)
+		}
 
-	// // Comment routes
-	// commentGroup := apiGroup.Group("/comments")
-	// {
-	// 	commentGroup.GET("/:wish_id", handler.CommentHandler.GetCommentsByWishID)
-	// 	commentGroup.POST("/", handler.CommentHandler.CreateComment)
-	// 	commentGroup.DELETE("/:id", handler.CommentHandler.DeleteComment)
-	// }
-	// }
+	}
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	return router
 }
